--- a/ihalow_ncnn_model/metadata.yaml
+++ b/ihalow_ncnn_model/metadata.yaml
@@ -1,6 +1,6 @@
 description: Ultralytics ihalow model trained on /content/{HOME}/datasets/Target-UAV-6/data.yaml
 author: Ultralytics
-date: '2025-07-11T00:12:51.309471'
+date: '2025-07-11T16:33:22.898321'
 version: 8.3.163
 license: AGPL-3.0 License (https://ultralytics.com/license)
 docs: https://docs.ultralytics.com
@@ -8,11 +8,11 @@ stride: 32
 task: detect
 batch: 1
 imgsz:
-- 640
-- 640
+- 480
+- 480
 names:
   0: target
 args:
   batch: 1
-  half: false
+  half: true
 channels: 3
